--- a/css/style.css
+++ b/css/style.css
@@ -367,10 +367,18 @@ th
 {
 	top:45px;
 }
+#id_img
+{
+	left: 0;
+	margin: 0;
+	padding: 0;
+	position: absolute;
+	top: 0;
+}
 #id_img img
 {
-	border-radius: 50%;
-	width: 200px;
+	border-radius: 5%;
+	width: 250px;
 }
 #indicator_actual
 {
@@ -597,11 +605,12 @@ th
 	background: #ecf0f1;
 	border: 1px solid #7f8c8d;
 	border-radius: 0.3em;
-	display: inline-block;
+	display: block;
 	font-size: 0.9em;
 	margin: 0.5em;
 	padding: 0.7em;
 	text-align: left;
+	width: 250px;
 }
 #other_data span
 {
@@ -620,11 +629,13 @@ th
 	background: #ecf0f1;
 	border: 1px solid #7f8c8d;
 	border-radius: 0.3em;
-	display: inline-block;
+	display: block;
 	font-size: 0.9em;
 	margin: 0.5em;
+	margin-top: 2em;
 	padding: 0.7em;
 	text-align: left;
+	width: 250px;
 }
 #personal_data span
 {
@@ -652,17 +663,30 @@ th
 	content: "\e613";
 	font-family: "icomoon";
 }
-#profile_controls_holder
+#privileges_data
 {
-	background: #2980b9;
+	background: #ecf0f1;
+	border: 1px solid #7f8c8d;
+	border-radius: 0.3em;
 	display: inline-block;
-	padding: 0;
-	width: 100%;
+	font-size: 0.9em;
+	margin: 0.5em;
+	padding: 0.7em;
+	text-align: left;
+	width: 250px;
+}
+#data_holder
+{
+	display: inline-block;
 }
 #profile_pic
 {
 	border: transparent;
 	display: inline-block;
+	height: 150px;
+	position: relative;
+	padding: 0;
+	width: 250px;
 }
 #rfc_label:after
 {
@@ -816,18 +840,6 @@ th
 {
 	color: #2980b9;
 }
-#update_pass, #update_pic
-{
-	background: #FFBC00;
-	border: 1px solid #704b00;
-	border-bottom: 3px solid #704b00;
-	color: #704b00;
-	display: inline-block;
-	float: right;
-	font-size: 0.8em;
-	padding: 0.5em 0.6em;
-	width: 70px;
-}
 #upload_photo
 {
 	background: white;
@@ -840,11 +852,14 @@ th
 }
 #user
 {
+	background: rgba(221,79,36,0.5);
+	bottom: -1.7em;
 	color: white;
 	display: inline-block;
 	font-size: 1em;
-	padding: 0.95em 1em;
-	width: 70px;
+	padding: 0.2em 1em;
+	position: absolute;
+	right: 0;
 }
 #user_label:after
 {
@@ -859,6 +874,18 @@ th
 #vertical_spacer
 {
 	display: none;
+}
+#work_data
+{
+	background: #ecf0f1;
+	border: 1px solid #7f8c8d;
+	border-radius: 0.3em;
+	display: inline-block;
+	font-size: 0.9em;
+	margin: 0.5em;
+	padding: 0.7em;
+	text-align: left;
+	width: 250px;
 }
 .calendar_row
 {
