--- a/css/style.css
+++ b/css/style.css
@@ -605,7 +605,6 @@ th
 	background: #ecf0f1;
 	border: 1px solid #7f8c8d;
 	border-radius: 0.3em;
-	display: block;
 	font-size: 0.9em;
 	margin: 0.5em;
 	padding: 0.7em;
@@ -613,6 +612,24 @@ th
 	width: 250px;
 }
 #other_data span
+{
+	color: black;
+	font-size: 1em;
+}
+#other_data_root
+{
+	color: #7f8c8d;
+	background: #ecf0f1;
+	border: 1px solid #7f8c8d;
+	border-radius: 0.3em;
+	display: inline-block;
+	font-size: 0.9em;
+	margin: 0.5em;
+	padding: 0.7em;
+	text-align: left;
+	width: 250px;
+}
+#other_data_root span
 {
 	color: black;
 	font-size: 1em;
@@ -629,7 +646,6 @@ th
 	background: #ecf0f1;
 	border: 1px solid #7f8c8d;
 	border-radius: 0.3em;
-	display: block;
 	font-size: 0.9em;
 	margin: 0.5em;
 	margin-top: 2em;
@@ -638,6 +654,24 @@ th
 	width: 250px;
 }
 #personal_data span
+{
+	color: black;
+	font-size: 1em;
+}
+#personal_data_root
+{
+	color: #7f8c8d;
+	background: #ecf0f1;
+	border: 1px solid #7f8c8d;
+	border-radius: 0.3em;
+	display: inline-block;
+	font-size: 0.9em;
+	margin: 0.5em;
+	padding: 0.7em;
+	text-align: left;
+	width: 250px;
+}
+#personal_data_root span
 {
 	color: black;
 	font-size: 1em;
@@ -663,18 +697,6 @@ th
 	content: "\e613";
 	font-family: "icomoon";
 }
-#privileges_data
-{
-	background: #ecf0f1;
-	border: 1px solid #7f8c8d;
-	border-radius: 0.3em;
-	display: inline-block;
-	font-size: 0.9em;
-	margin: 0.5em;
-	padding: 0.7em;
-	text-align: left;
-	width: 250px;
-}
 #data_holder
 {
 	display: inline-block;
@@ -688,6 +710,19 @@ th
 	padding: 0;
 	width: 250px;
 }
+#profile_pic_root
+{
+	border: transparent;
+	display: inline-block;
+	height: 150px;
+	position: relative;
+	padding: 0;
+	width: 250px;
+}
+#profile_pic_root img
+{
+	border-radius: 0.5em;
+}
 #rfc_label:after
 {
 	content: "\e601";
@@ -699,7 +734,7 @@ th
 	border-radius: 10px;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.5);
 	display: block;
-	margin: 1em 10px 1em 10px;
+	margin: 1em 0.5em 1em 0.5em;
 	padding: 0.5em 0.5em;
 	top: 15em;
 }
@@ -875,18 +910,6 @@ th
 {
 	display: none;
 }
-#work_data
-{
-	background: #ecf0f1;
-	border: 1px solid #7f8c8d;
-	border-radius: 0.3em;
-	display: inline-block;
-	font-size: 0.9em;
-	margin: 0.5em;
-	padding: 0.7em;
-	text-align: left;
-	width: 250px;
-}
 .calendar_row
 {
 	color: black;
@@ -916,9 +939,7 @@ th
 }
 .contenido_item_perfil p
 {
-	border: 1px solid red;
-	padding: 0.5em 1em;
-	display: inline-block; 
+	padding: 0.5em 1em; 
 }
 .current a
 {
@@ -1112,12 +1133,15 @@ th
 }
 .fields_holder
 {
-	background: white;
 	border-radius: 0.2em 0.2em 0.2em 0.2em;
 	margin: 1em 19px;
 	padding: 0;
 	vertical-align: top;
-	
+	text-align: left;
+}
+.fields_holder:first-child
+{
+	margin-top: 1em;
 }
 .fields_holder_chk
 {
@@ -1173,6 +1197,10 @@ th
 	border-top: 1px solid #999;
 	height: 0;
 	width: 80%;
+}
+.item_perfil_in
+{
+	display: block;
 }
 .left_hour
 {
@@ -1342,6 +1370,10 @@ th
 {
 	background: #E0E3E7;
 	width: 70%;
+}
+.selecion_privileges
+{
+	width: 50px;
 }
 .title_item_perfil
 {
