--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ header #avatar
 	background: rgba(243,243,243,0.3);
 	border-radius: 0.2em;
 	float: right;
-	margin: 0.5em 1em 0 0;
+	margin: 0.5em 0 0 0;
 	padding: 0.25em;
 }
 header #avatar figcaption
@@ -93,6 +93,7 @@ header #avatar img
 {
 	float: left;
 	width: 50px;
+	height: 50px;
 }
 footer
 {
