--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ a
 }
 body
 {
-	background: #EFEFEF;
+	background: #FFFFFF;
 	color: #4C4C4C;
 	font-family: 'PT Sans Narrow', sans-serif;
 	font-size: 16px;
@@ -182,8 +182,7 @@ th
 }
 #calendar_style
 {
-	margin-top: 4em;
-	margin-bottom: 1em;
+	margin: 0;
 }
 #camera
 {
@@ -210,17 +209,15 @@ th
 }
 #content
 {
-	background: #E7E3FF;
+	background: #FFFFFF;
 	border-radius: 5px;
-	box-shadow: 0 1px 3px rgba(0,0,0,0.5);
 	display: inline-block;
 	position: relative;
 }
 #content_calendar
 {
-	background: #E7E3FF;
+	background: #FFFFFF;
 	border-radius: 5px;
-	box-shadow: 0 1px 3px rgba(0,0,0,0.5);
 	display: inline-block;
 	float: right;
 	margin-right: 1em; 
@@ -236,12 +233,9 @@ th
 	color: #704b00;
 	display: block;
 	font-size: 1.3em;
-	margin-left: -95px;
 	padding: 0.3em 0.7em;
-	position: absolute;
-	left: 50%;
+	position: relative;
 	text-align: center;
-	top: -1.7em;
 	width: 160px;
 }
 #content_title_calendar
@@ -252,44 +246,29 @@ th
 	color: #704b00;
 	display: block;
 	font-size: 1.3em;
-	margin-left: -95px;
 	padding: 0.3em 0.7em;
-	position: absolute;
-	left: 50%;
+	position: relative;
 	text-align: center;
-	top: -1.7em;
 	width: 160px;
 }
 #content_subtitle
 {
 	background: #DD4F24;
-	border-radius: 0.3em 0 0 0.3em;
-	box-shadow: 0 1px 3px rgba(0,0,0,0.5);
 	color: white;
 	font-weight: bold;
-	left: -0.5em;
+	margin-bottom: 0;
 	padding: 0.5em 0 0.5em 0.5em;
-	position: absolute;
-	top: 1.5em;
+	position: relative;
 	width: 80%;
-}
-#content_subtitle:before
-{
-	border-left: 19px solid #DD4F24;
-	border-top: 19px solid transparent;
-	content: "";
-	right: -1.2em;
-	position:absolute;
-	top:0;
 }
 #content_subtitle:after
 {
-	border-right: 19px solid transparent;
-	border-top: 19px solid #DD4F24;
+	border-left: 35px solid #DD4F24;
+	border-top: 35px solid transparent;
 	content: "";
-	right:-1.2em;
+	right: -3em;
 	position:absolute;
-	bottom:0;
+	top:0;
 }
 #content_wrapper
 {
@@ -477,17 +456,6 @@ th
 	color: rgba(255,255,255,0.9);
 	font-size: 1.5em;
 }
-#new_h, #manage_h, #print_h
-{
-	color: rgba(0,0,0,0.5);
-	cursor: pointer;
-	font-size: 0.8em;
-	transition: all 0.5s;
-}
-#new_h:hover, #manage_h:hover, #print_h:hover
-{
-	color: rgba(0,0,0,0.9);
-}
 #look:after
 {
 	content: "\e610";
@@ -503,6 +471,11 @@ th
 	margin-top: 1em; 
 }
 #manage:after
+{
+	content: "\e60b";
+	font-family: "icomoon";
+}
+#manage_h:after
 {
 	content: "\e60b";
 	font-family: "icomoon";
@@ -561,6 +534,22 @@ th
 	top: 0;
 }
 #new:after
+{
+	content: "\e619";
+	font-family: "icomoon";
+}
+#new_h, #manage_h, #print_h
+{
+	color: rgba(0,0,0,0.5);
+	cursor: pointer;
+	font-size: 1.5em;
+	transition: all 0.5s;
+}
+#new_h:hover, #manage_h:hover, #print_h:hover
+{
+	color: rgba(0,0,0,0.9);
+}
+#new_h:after
 {
 	content: "\e619";
 	font-family: "icomoon";
@@ -747,6 +736,11 @@ th
 	content: "\e613";
 	font-family: "icomoon";
 }
+#print_h:after
+{
+	content: "\e613";
+	font-family: "icomoon";
+}
 #data_holder
 {
 	display: inline-block;
@@ -919,7 +913,7 @@ th
 #temporal_date_catcher
 {
 	display: block;
-	margin: 12em 10px 0 10px;
+	margin: 0 10px 0 10px;
 	width: 145px;
 }
 #temporal_date_catcher tbody
@@ -947,8 +941,8 @@ th
 	border-top-left-radius: 5px;
 	border-top-right-radius: 5px;
 	display: block;
+	margin: 0;
 	position: relative;
-	height: 6em;
 }
 #up_content_calendar
 {
@@ -1332,14 +1326,21 @@ th
 .month_title
 {
 	background: #DD4F24;
-	border-radius: 4px;
 	color:white;
-	margin-top: 2.5em;
-	margin-left: -100px;
+	margin-bottom: 0;
+	padding: 0.3em 0 0.4em 0;
+	position: relative;
 	text-align: center;
-	position: absolute;
-	left: 50%;
 	width: 200px;
+}
+.month_title:after
+{
+	border-left: 39px solid #DD4F24;
+	border-top: 39px solid transparent;
+	content: "";
+	right: -2.1em;
+	position:absolute;
+	top:0;
 }
 .new_user_input
 {
@@ -1384,15 +1385,14 @@ th
 }
 .next_month:after
 {
-	background: rgba(189, 195, 199,0.5);
 	border-radius: 50%;
-	color: rgba(100,100,100,0.7);
+	color: white;
 	content: "\e61f";
 	font-family: "icomoon";
 	font-size: 2.5em;
 	position: absolute;
 	right: 0em;
-	top: 12%;
+	top: 59%;
 }
 .patient_check
 {
@@ -1430,7 +1430,6 @@ th
 }
 .prev_month:after
 {
-	background: rgba(189, 195, 199,0.5);
 	border-radius: 50%;
 	color: rgba(100,100,100,0.7);
 	content: "\e620";
@@ -1438,7 +1437,7 @@ th
 	font-size:2.5em;
 	left: 0em;
 	position: absolute;
-	top: 12%;
+	top: 59%;
 }
 .search_field
 {
