--- a/css/style.css
+++ b/css/style.css
@@ -1095,7 +1095,7 @@ th
 }
 .draggable_hour_1
 {
-	background: #16a085;
+	background: #13273C;
 	border-radius: 3px;
 	box-shadow: 0 1px 2px rgba(0,0,0,0.5);
 	color: white;
@@ -1105,7 +1105,7 @@ th
 }
 .draggable_hour_2
 {
-	background: #8e44ad;
+	background: #13273C;
 	border-radius: 3px;
 	box-shadow: 0 2px 2px rgba(0,0,0,0.5);
 	color: white;
@@ -1115,7 +1115,7 @@ th
 }
 .draggable_hour_3
 {
-	background: #c0392b;
+	background: #13273C;
 	border-radius: 3px;
 	box-shadow: 0 1px 2px rgba(0,0,0,0.5);
 	color: white;
@@ -1125,7 +1125,7 @@ th
 }
 .draggable_hour_4
 {
-	background: #d35400;
+	background: #13273C;
 	border-radius: 3px;
 	box-shadow: 0 1px 2px rgba(0,0,0,0.5);
 	color: white;
@@ -1135,7 +1135,7 @@ th
 }
 .draggable_hour_5
 {
-	background: #f39c12;
+	background: #13273C;
 	border-radius: 3px;
 	box-shadow: 0 1px 2px rgba(0,0,0,0.5);
 	color: white;
@@ -1145,7 +1145,7 @@ th
 }
 .draggable_hour_6
 {
-	background: #27ae60;
+	background: #13273C;
 	border-radius: 3px;
 	box-shadow: 0 1px 2px rgba(0,0,0,0.5);
 	color: white;
