--- a/css/style.css
+++ b/css/style.css
@@ -1088,8 +1088,8 @@ th
 .draggable_hour
 {
 	background: #13273C;
+	border: 1px solid rgba(255,255,255,0.5);
 	border-radius: 5px 3px;
-	box-shadow: 0 1px 2px rgba(0,0,0,0.5);
 	color: white;
 	display: inline-block;
 	font-size: 0.9em;
@@ -1097,7 +1097,7 @@ th
 	margin: 0;
 	padding: 0 1em 0 0.5em;
 	position: absolute;
-	width: 93%;
+	width: 96.6%;
 }
 .draggable_hour:after
 {
@@ -1157,7 +1157,7 @@ th
 }
 .draggable_wrapper
 {
-	border: 1px solid red;
+	/*border: 1px solid magenta;*/
 	display: inline-block;
 	min-height: 40px;
 	position: relative;
