--- a/css/style.css
+++ b/css/style.css
@@ -1095,13 +1095,7 @@ th
 {
 	color: white;
 	margin: 0;
-	font-size: 1.8em;
-}
-.meridiane
-{
-	color: white;
-	margin: 0;
-	font-size: 0.8em;
+	font-size: 2.5em;
 }
 .day_title
 {
@@ -1311,8 +1305,7 @@ th
 	color: #2c3e50;
 	font-weight: normal;
 	font-size: 0.9em;
-	padding: 1em 0.2em;
-	text-align: center;
+	padding: 1em 0.2em 1em 0.5em;
 	width: 10%;
 }
 .manageapp
@@ -1364,6 +1357,12 @@ th
 	position: absolute;
 	right: 50%;
 	top: 100%;
+}
+.meridiane
+{
+	color: white;
+	margin: 0;
+	font-size: 1em;
 }
 .menu_profile:hover, .menu_help:hover, .menu_conf:hover
 {
