--- a/css/stylelogin.css
+++ b/css/stylelogin.css
@@ -30,6 +30,10 @@ h1
 	padding-top: 1em;
 	text-align: center;
 }
+h4
+{
+	margin-bottom: 0.5em;
+}
 header
 {
 	background: #34495e;
@@ -61,14 +65,20 @@ header
 	right: 0.5em;
 	z-index: 3;
 }
-.enhanced1
+#error_message
 {
-	color: #F2F5A9;
+	background: #F8CDC8;
+	border: 1px solid #c0392b;
+	border-radius: 0.2em;
+	color: #c0392b;
 	font-weight: bold;
+	padding: 0.5em;
+	text-align: center;
 }
 #info
 {
 	font-style: italic;
+	text-align: center;
 }
 #info a
 {
@@ -103,6 +113,14 @@ header
 	font-family: 'Pathway Gothic One', sans-serif;
 	float: right;
 	padding: 1em;
+}
+#modal_forgot
+{
+	border: 4px solid rgba(89,89,89,0.5);
+	border-radius: 1em; 
+	background: #ecf0f1;
+	padding: 1em 2em;
+	text-align: center;
 }
 #password_label:after
 {
@@ -163,10 +181,59 @@ header
 #user:focus, #password:focus
 {
 	background: #BEC9D0;
+	border: 1px solid #05316D;
 }
 #user_label:after
 {
 	font-size: 1.5em;
 	content: "\e617";
 	font-family: "icomoon";
+}
+.enhanced1
+{
+	color: #F2F5A9;
+	font-weight: bold;
+}
+.go_btn
+{
+	background: #FFBC00;
+	border-radius: 5px;
+	border: transparent;
+	border-bottom: 3px solid #704b00;
+	color: #704b00;
+	display: block;
+	padding: 0.5em 1em;
+}
+.restore
+{
+	transition: all 0.5s;
+	border: 1px solid #05316D;
+	border-radius: 25px;
+	margin: 0.5em;
+	outline: none;
+	padding: 0.5em 0.8em;
+	width: 83%;
+}
+.ui-button
+{
+	background: #2980b9;
+	border: 3px solid white;
+	border-radius: 50%;
+	color: white;
+	position: absolute;
+	right: -2.8em;
+	top: 0.5em;
+}
+.ui-dialog-titlebar
+{
+	position: relative;
+}
+.ui-widget-overlay
+{
+	background: rgba(44,62,80,0.8);
+	height: 100%;
+	left: 0;
+	position: fixed;
+	top: 0;
+	width: 100%;
 }
