--- a/css/style.css
+++ b/css/style.css
@@ -22,11 +22,16 @@ a
 {
 	text-decoration: none;
 }
+article
+{
+	display: inline-block;
+	width: 49%;
+	position: relative;
+}
 body
 {
 	background: #ecf0f1;
 	color: #4C4C4C;
-	font-family: 'PT Sans Narrow', sans-serif;
 	font-size: 16px;
 	margin: 0px;
 }
@@ -224,56 +229,78 @@ th
 	position: relative;
 	width: 20%;
 }
+#content_users
+{
+	background: #FFFFFF;
+	border-radius: 5px;
+	display: inline-block;
+	margin: 0 0 1em 1em;
+	position: relative;
+	width: 90%;
+}
 #content_title
 {
-	background: #CBE3F4;
-	border-bottom: 3px solid #7f8c8d;
-	color: rgba(0,0,0,0.9);
-	display: block;
-	font-size: 1.3em;
+	background: #2980b9;
+	color: white;
+	display: inline-block;
+	font-size: 1em;
 	padding: 0.4em;
 	position: relative;
+	text-align: center;
+	width: 80px;
 }
 #content_title_calendar
 {
-	background: #CBE3F4;
-	border-bottom: 3px solid #7f8c8d;
-	color: rgba(0,0,0,0.9);
-	display: block;
-	font-size: 1.3em;
+	background: #2980b9;
+	color: white;
+	display: inline-block;
+	font-size: 1em;
 	padding: 0.4em;
 	position: relative;
+	width: 85px;
 }
 #content_title_left
 {
-	background: #CBE3F4;
-	border-bottom: 3px solid #7f8c8d;
-	color: rgba(0,0,0,0.9);
+	background: #2980b9;
+	color: white;
 	display: block;
-	font-size: 1.3em;
+	font-size: 1em;
 	margin-left: 0.5em;
 	padding: 0.4em;
 	position: relative;
+	width: 130px;
+}
+#content_title_users
+{
+	background: #2980b9;
+	color: white;
+	display: inline-block;
+	font-size: 1em;
+	padding: 0.4em;
+	position: relative;
+	text-align: center;
+	width: 150px;
+}
+#content_title:after, #content_title_calendar:after, #content_title_users:after
+{
+	border-left: 34px solid #2980b9;
+	border-bottom: 34px solid transparent;
+	content: "";
+	left: 100%;
+	position: absolute;
+	top: 0;
 }
 #content_subtitle
 {
-	background: #DD4F24;
 	border-radius: 0.5em 0 0 0;
-	color: white;
-	font-weight: bold;
-	margin-bottom: 0;
+	color: #2980b9;
+	display: inline-block;
+	font-size: 1.2em;
+	font-style: italic;
+	margin: 0 0 0 2em;
 	padding: 0.5em 0 0.5em 0.5em;
 	position: relative;
 	width: 80%;
-}
-#content_subtitle:after
-{
-	border-left: 35px solid #DD4F24;
-	border-top: 35px solid transparent;
-	content: "";
-	right: -3em;
-	position:absolute;
-	top:0;
 }
 #content_wrapper
 {
@@ -484,6 +511,12 @@ th
 {
 	content: "\e60b";
 	font-family: "icomoon";
+}
+#masPerfil
+{
+	border: 1px solid red;
+	position: absolute;
+	top: 0;
 }
 #menu
 {
@@ -805,7 +838,7 @@ th
 	border-radius: 10px;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.5);
 	display: block;
-	margin: 1em 0.5em 1em 0.5em;
+	margin: 1em 1em 0.5em 0.5em;
 	padding: 0.5em 0.5em;
 	top: 15em;
 }
@@ -839,7 +872,7 @@ th
 	padding: 0.5em 0.5em;
 	position:absolute;
 	right: 0.5em;
-	top: 0.6em;
+	top: 0em;
 }
 #quick_access_h ul
 {
@@ -965,7 +998,6 @@ th
 #up_content
 {
 	background: white;
-	border-bottom: 1px solid #7f8c8d;
 	border-top-left-radius: 5px;
 	border-top-right-radius: 5px;
 	display: block;
@@ -1043,7 +1075,15 @@ th
 	color: black;
 	margin-top: 0;
 	padding-bottom: 1em;
+	padding-top: 1em;
 	text-align: center;
+}
+.contenido_item_perfil img
+{
+	border: 3px solid #ecf0f1;
+	left: 0.5em;
+	position: absolute;
+	width: 150px;
 }
 .contenido_item_perfil p
 {
@@ -1237,7 +1277,7 @@ th
 	border-bottom: 1px solid #7f8c8d;
 	border-left: 1px solid #95a5a6;
 	border-right: 1px solid #95a5a6;
-	height: 40px;
+	height: 30px;
 	padding: 0;
 	position: relative;
 }
@@ -1266,7 +1306,17 @@ th
 }
 .item_perfil_in
 {
-	display: block;
+	display: inline-block;
+	width: 50%;
+}
+.item_perfil_block_right
+{
+	display: inline-block;
+	width: 50%;
+}
+.item_perfil_su
+{
+	width: 100%;
 }
 .left_hour
 {
@@ -1276,7 +1326,13 @@ th
 	font-weight: normal;
 	font-size: 0.9em;
 	padding: 1em 0.2em 1em 0.5em;
+	text-align: center;
+	transition: all 0.5s;
 	width: 10%;
+}
+.left_hour_i
+{
+	text-align: left;
 }
 .manageapp
 {
@@ -1369,23 +1425,15 @@ th
 }
 .month_title
 {
-	background: #DD4F24;
 	border-radius: 0.5em 0 0 0;
-	color:white;
-	margin-bottom: 0;
+	color: #2980b9;
+	display: inline-block;
+	font-weight: normal;
+	font-style: italic;
+	margin: 0 0 1.5em 2em;
 	padding: 0.3em 0 0.4em 0;
 	position: relative;
 	text-align: center;
-	width: 200px;
-}
-.month_title:after
-{
-	border-left: 39px solid #DD4F24;
-	border-top: 39px solid transparent;
-	content: "";
-	right: -2.1em;
-	position:absolute;
-	top:0;
 }
 .new_user_input
 {
@@ -1430,13 +1478,15 @@ th
 }
 .next_month:after
 {
+	background: rgba(12,12,12,0.5);
 	border-radius: 50%;
 	color: white;
 	content: "\e61f";
 	font-family: "icomoon";
-	font-size: 2.5em;
+	font-size: 1.7em;
 	position: absolute;
-	right: 0em;
+	right: 0.3em;
+	text-align: center;
 	top: 59%;
 }
 .patient_check
@@ -1475,13 +1525,15 @@ th
 }
 .prev_month:after
 {
+	background: rgba(12,12,12,0.5);
 	border-radius: 50%;
-	color: rgba(100,100,100,0.7);
+	color: white;
 	content: "\e620";
 	font-family: "icomoon";
-	font-size:2.5em;
-	left: 0em;
+	font-size:1.7em;
+	right: 1.5em;
 	position: absolute;
+	text-align: center;
 	top: 59%;
 }
 .search_field
@@ -1522,15 +1574,15 @@ th
 	border-left: 7px solid white;
 	border-top: 7px solid transparent;
 	content: "";
-	margin-top: -9px;
+	margin-top: -5px;
 	position: absolute;
 	right: 100%;
 	top: 50%;
 }
 .minutitos
 {
-	border: 1px solid red;
 	border-radius: 0.3em;
+	color: transparent;
 	padding: 0.2em;
 	bottom: 0.1em;
 	font-size: 0.8em; 
