--- a/css/style.css
+++ b/css/style.css
@@ -349,11 +349,22 @@ th
 	content: "\e618";
 	font-family: "icomoon";
 }
+#dir_label:after
+{
+	content: "\e60e";
+	font-family: "icomoon";
+}
 #departments a:before
 {
 	color: white;
 	content: "\e606";
 	font-family: "icomoon";
+}
+#doc
+{
+	background: white;
+	border: transparent;
+	border-radius: 0.5em;
 }
 #donator a:after
 {
@@ -378,10 +389,15 @@ th
 	font-style: normal;
 	font-weight: bold;
 }
-#dir_label:after
+#dur
 {
-	content: "\e60e";
-	font-family: "icomoon";
+	background: white;
+	border: transparent;
+	border-radius: 0.5em;
+}
+#duration_already_patient
+{
+	margin: 1em;
 }
 #fifteen, #fourtyfive, #half
 {
@@ -496,6 +512,16 @@ th
 	float: left;
 	position: relative;
 }
+#lista_title
+{
+	background: #DD4F24;
+	border-radius: 0.7em;
+	color: white;
+	font-style: italic;
+	font-weight: bold;
+	margin: 1em 1em 0 1em;
+	padding: 0.5em 0;
+}
 #look, #manage, #new, #print
 {
 	color: rgba(255,255,255,0.9);
@@ -606,6 +632,16 @@ th
 	position: absolute;
 	right: 100%;
 	top: 0;
+}
+#name_already_patient
+{
+	margin: 1em;
+}
+#nom
+{
+	background: rgba(0,0,0,0.2);
+	border-radius: 0.2em;
+	padding: 0.3em;
 }
 #new:after
 {
@@ -1328,15 +1364,12 @@ th
 {
 	background: white;
 	border-radius: 0.2em 0.2em 0.2em 0.2em;
-	display: block;
+	display: inline-block;
 	margin: 0.5em 19px;
 	padding: 0;
+	position: relative;
 	vertical-align: top;
 	width: 240px;
-}
-.fields_holder_chk:first-child
-{
-	margin-top: 1em;
 }
 .fixed
 {
@@ -1388,6 +1421,21 @@ th
 	outline: none;
 	padding: 0.5em;
 	width: 150px;
+}
+.item_list
+{
+	background: #2980b9;
+	border-radius: 0.5em;
+	color: white;
+	font-size: 1.5em;
+	margin: 1em;
+	padding: 1em;
+	position: relative;
+}
+.item_list img
+{
+	border-radius: 50%;
+	top: -0.8em;
 }
 .item_perfil
 {
@@ -1695,6 +1743,31 @@ th
 {
 	background: white;
 	cursor: pointer;
+}
+.you_should_check
+{
+	background: #DD4F24;
+	border-radius: 0.5em 0.3em 0.3em 0.5em;
+	color: white;
+	display: inline-block;
+	font-size: 0.8em;
+	font-style: italic;
+	left: 100%;
+	margin-top: 0.2em;
+	margin-left: 1em; 
+	padding: 0.5em;
+	position:absolute;
+	width: 300px;
+}
+.you_should_check:after
+{
+	border-bottom: 10px solid transparent;
+	border-right: 10px solid #DD4F24;
+	border-top: 10px solid transparent;
+	content: "";
+	position: absolute;
+	right: 100%;
+	top: 0.4em;
 }
 .minutitos
 {
