--- a/css/style.css
+++ b/css/style.css
@@ -1120,6 +1120,16 @@ th
 {
 	display: none;
 }
+.apnmbr
+{
+	bottom: 0;
+	color: #4C4C4C;
+	font-size: 0.7em;
+	font-weight: normal;
+	left: 0;
+	position: absolute;
+	width: 100%;
+}
 .app_identifier
 {
 	margin: 0.6em 0;
@@ -1147,6 +1157,7 @@ th
 {
 	font-weight: bold;
 	padding-left: 0.4em;
+	position: relative;
 }
 .close_session
 {
