--- a/css/style.css
+++ b/css/style.css
@@ -1122,16 +1122,20 @@ th
 }
 .apnmbr
 {
+	background: #27496B;
 	bottom: 0;
-	color: #4C4C4C;
+	color: white;
 	font-size: 0.7em;
 	font-weight: normal;
-	left: 0;
+	padding: 0 0.5em 0 0;
 	position: absolute;
-	width: 100%;
+	right: 0;
+	text-align: right;
+	width: 35%;
 }
 .app_identifier
 {
+	font-size: 0.8em;
 	margin: 0.6em 0;
 }
 .button_yellow
@@ -1389,7 +1393,11 @@ th
 }
 .here_hour
 {
-	font-weight: normal;
+	font-weight: bold;
+}
+.here_hourd
+{
+	font-weight: bold;
 }
 .hour_row
 {
